# distributed_hhe_ppml

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  default.env  docker-compose.yml  start.sh
.github/workflows/: cmake-single-platform.yml
configs/: config.cpp
data/Harpocrates_recordingwise_SIESTA_4percent/: c000101_binaryoutput.txt  c000101_countoutput.txt  c000101_data.txt  c000102_countoutput.txt  c000102_data.txt  c000201_binaryoutput.txt  c000201_countoutput.txt  c000201_data.txt  c000202_binaryoutput.txt  c000202_countoutput.txt  c000202_data.txt  c000301_binaryoutput.txt  c000301_countoutput.txt  c000301_data.txt  c000302_binaryoutput.txt  c000302_countoutput.txt  c000302_data.txt  c000401_binaryoutput.txt  c000401_countoutput.txt  c000401_data.txt  c000402_binaryoutput.txt  c000402_countoutput.txt  c000402_data.txt  c000601_countoutput.txt  c000601_data.txt  c000602_binaryoutput.txt  c000602_data.txt  c000701_binaryoutput.txt  c000701_countoutput.txt  c000701_data.txt  c000702_binaryoutput.txt  c000702_data.txt  c000801_data.txt  c000802_binaryoutput.txt  c000802_data.txt  c000901_binaryoutput.txt  c000901_countoutput.txt  c000901_data.txt  c000902_binaryoutput.txt  c000902_countoutput.txt  (+977 more)
middleware/: analyse.py  csp.py  hhe.proto  hhe_pb2.py  hhe_pb2_grpc.py  setup.py  storage_hook.sh
middleware/distributed_hhe_ppml_client/: __init__.py
middleware/distributed_hhe_ppml_client/cli/: __init__.py
middleware/distributed_hhe_ppml_client/services/: __init__.py  hhe_pb2_grpc.py
protos/: hhe.proto
src/: Analyst.cpp  Analyst.h  AnalystRPC.cpp  AnalystRPC.h  AnalystServiceCSPClient.cpp  AnalystServiceCSPClient.h  AnalystServiceUserClient.cpp  AnalystServiceUserClient.h  CSP.cpp  CSP.h  CSPRPC.cpp  CSPRPC.h  CSPServiceAnalystClient.cpp  CSPServiceAnalystClient.h  CSPServiceUserClient.cpp  CSPServiceUserClient.h  Common.h  User.cpp  User.h  UserRPC.cpp  hhe.grpc.pb.cc  hhe.grpc.pb.h  hhe.pb.cc  hhe.pb.h  main.cpp  server.cpp
src/examples/: hhe_pktnn_examples.cpp  hhe_pktnn_examples.h
src/examples/Analyst/: Analyst.cpp  Analyst.h  AnalystRPC.cpp  AnalystRPC.h  CSPServiceAnalystClient.cpp  CSPServiceAnalystClient.h  uuid.h
src/examples/Analyst/arc/: Analyst.cpp  Analyst.h  AnalystRPC.cpp  AnalystRPC.h
src/examples/CSP/: AnalystServiceCSPClient.cpp  AnalystServiceCSPClient.h  CSP.cpp  CSP.h  CSPRPC.cpp  CSPRPC.h
src/examples/FaaS/: client.cpp  server.cpp
src/examples/Models/: test.cpp  test.h
src/examples/User/: AnalystServiceUserClient.cpp  AnalystServiceUserClient.h  CSPServiceUserClient.cpp  CSPServiceUserClient.h  User.cpp  User.h  UserRPC.cpp
src/gen_code/: hhe.grpc.pb.cc  hhe.grpc.pb.h  hhe.pb.cc  hhe.pb.h
src/pasta/: pasta_3_seal.cpp  pasta_3_seal.h
tests/: he_test.cpp  symmetric_encryption_test.cpp
